--- a/ContactApp/iOS/Info.plist
+++ b/ContactApp/iOS/Info.plist
@@ -44,5 +44,7 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>New Entry</string>
+	<key>NSContactsUsageDescription</key>
+	<string>New Entry</string>
 </dict>
 </plist>
