--- a/ContactApp/Droid/Properties/AndroidManifest.xml
+++ b/ContactApp/Droid/Properties/AndroidManifest.xml
@@ -3,5 +3,11 @@
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
 	<uses-permission android:name="android.permission.WRITE_CONTACTS" />
+	<uses-permission android:name="android.permission.WRITE_SMS" />
+	<uses-permission android:name="android.permission.SEND_SMS" />
+	<uses-permission android:name="android.permission.RECEIVE_SMS" />
+	<uses-permission android:name="android.permission.READ_SMS" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<application android:label="ContactApp"></application>
 </manifest>
