--- a/ContactApp/Droid/packages.config
+++ b/ContactApp/Droid/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid71" />
+  <package id="Corcav.Behaviors" version="2.3.7" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="2.0.1" targetFramework="monoandroid71" />
   <package id="Prism.Core" version="6.3.0" targetFramework="monoandroid71" />
@@ -8,6 +9,7 @@
   <package id="Prism.Unity.Forms" version="6.3.0" targetFramework="monoandroid71" />
   <package id="Unity" version="4.0.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Messaging" version="5.0.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
